chore: update dependencies and add RPC integration tests for command validation

--- a/cli/Cargo.toml
+++ b/cli/Cargo.toml
@@ -27,3 +27,4 @@ tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
 [dev-dependencies]
 assert_cmd = "2.1.2"
 predicates = "3.1.4"
+ureq = { version = "3.2.0", features = ["json"] }
